--- a/templates/cars.html
+++ b/templates/cars.html
@@ -10,8 +10,9 @@
       <th align="center">Brand</th>
       <th align="center">Model</th>
       <th align="center">Year</th>
-      <th align="center">Price</th>
-      <th align="center">Owner</th>
+      <th align="center">Category</th>
+      <th align="center">Price in $</th>
+      <!--<th align="center">Owner</th>-->
     </tr>
   </thead>
   <tbody>
@@ -21,14 +22,17 @@
       <td align="center">{{c.brand}}</td>
       <td align="center">{{c.pattern}}</td>
       <td align="center">{{c.year}}</td>
+      <td align="center">{{c.category}}</td>
       <td align="center">{{c.price}}</td>
-      <td align="center">{{c.owner}}</td>
+      <!--<td align="center">{{c.owner}}</td>-->
     </tr>
   {% endfor %}
   </tbody>
 </table>
     <hr>
 {% endblock %}
+
+
 {% block js%}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.18/af-2.3.2/b-1.5.4/b-colvis-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/cr-1.5.0/fc-3.2.5/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sl-1.2.6/datatables.min.css"/>
